# dice-roll

./: .gitignore  Cargo.toml  Dockerfile  README.md  cdk.json  index.ts  package-lock.json  package.json
lib/: dice-roll.ts
lib/stacks/: dev-stack.ts  prod-stack.ts
src/: index.ts  lib.rs
src/dice-roll/: discord-webhook-handler.ts  package-lock.json  package.json  rest-handler.ts
src/dice-roll/models/: discord-payload.ts  payload.ts  response.ts
src/dice-roll/processors/: payload-processor.ts  roll-from-discord-processor.ts
test/: dice-roll.test.ts
