[package]
name = "dice-roll"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.50", features = ["derive"] }
clap-stdin = "0.7.0"
hyper = { version = "1.7.0", features = ["full"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
